--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -6,8 +6,16 @@ h1, h2, h3, h4, h5, h6, p, code {
     text-align: left;
 }
 
-.screen {
+.small-margin {
+    margin: 3rem;
+}
+
+.margin {
     margin: 7rem;
+}
+
+.big-margin {
+    margin: 20rem;
 }
 
 .grid {
